<resources>
    <string name="app_name">MobiAd</string>
    <string name="work_done">Download Complete</string>
    <string name="work_done_new">Work Completed</string>
    <string name="subscribe">Subscribe</string>
    <string name="section_1_title">Sports</string>
    <string name="section_1_subtitle">“The five S’s of sports training are: stamina, speed, strength, skill, and spirit; but the greatest of these is spirit.”</string>
    <string name="section_2_title">News</string>
    <string name="section_2_subtitle">"Bad news travels fast. Good news takes the scenic route."</string>
    <string name="section_3_title">Entertainment/Movies</string>
    <string name="section_3_subtitle">“No good movie is too long and no bad movie is short enough.”</string>
    <string name="title_activity_dashboard">@string/app_name</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_notifications">Rewards</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="minutes_served">Minutes Served</string>
    <string name="minutes_value">229</string>
    <string name="money_earned">Money Earned</string>
    <string name="money_value">490</string>
    <string name="inr">rupees</string>
    <string name="min">min</string>
    <string name="scratch_cards">Scratch Cards</string>
    <string name="_50rs">₹ 50</string>
    <string name="_110rs">₹ 110</string>
    <string name="_40rs">₹ 40</string>
    <string name="_77rs">₹ 77</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="device_name">Device Name</string>
    <string name="contact_name_one">Contact Name One</string>
    <string name="contact_name_two">Contact Name Two</string>
    <string name="contact_name_three">Contact Name Three</string>
    <string name="in_call">In call</string>
</resources>
