<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/home_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/section1"
                android:layout_weight="1"
                android:background="@color/flat_color_1"
                android:layout_width="match_parent"
                android:layout_height="0dp">


            <TextView
                    android:id="@+id/section1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/section_1_title"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/section1_subtitle"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:id="@+id/section1_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/section_1_subtitle"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/section1Subscription"
                    app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/section1Subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="16dp"
                    app:fabSize="normal"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:background="#ff0000"
                    android:src="@drawable/ic_add_white_24dp"
                    app:layout_anchor="@id/section1"
                    app:layout_anchorGravity="bottom|right|end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/section2"
                android:layout_weight="1"
                android:background="@color/flat_color_2"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <TextView
                    android:id="@+id/section2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/section_2_title"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/section2_subtitle"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:id="@+id/section2_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/section_2_subtitle"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/section2Subscription"
                    app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/section2Subscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    app:fabSize="normal"
                    android:layout_marginBottom="16dp"
                    android:background="#ff0000"
                    android:src="@drawable/ic_add_white_24dp"
                    app:layout_anchor="@id/section2"
                    app:layout_anchorGravity="bottom|right|end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/section3"
                android:layout_weight="1"
                android:background="@color/flat_color_3"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <TextView
                    android:id="@+id/section3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/section_3_title"
                    android:textColor="@color/textColor"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toTopOf="@+id/section3_subtitle"
                    app:layout_constraintStart_toStartOf="parent" />

            <TextView
                    android:id="@+id/section3_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/section_3_subtitle"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/section3Subscription"
                    app:layout_constraintStart_toStartOf="parent" />



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/section3Subscription"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="16dp"
                    app:fabSize="normal"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/ic_add_white_24dp"
                    app:layout_anchor="@id/section3"
                    app:layout_anchorGravity="bottom|right|end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

